Mapped themes instead of hardcoding

--- a/components/index/Hero.module.css
+++ b/components/index/Hero.module.css
@@ -80,5 +80,5 @@
 	right: 15px;
 	position: absolute;
 	cursor: pointer;
-	color: var(--foreground-text-least);
+	color: var(--foreground-text-less);
 }
