--- a/components/index/Hero.module.css
+++ b/components/index/Hero.module.css
@@ -25,6 +25,7 @@
 }
 
 .container {
+	padding: 20px;
 	position: relative;
 	z-index: 2;
 	max-width: 800px;
@@ -77,7 +78,7 @@
 .settings {
 	font-size: 2em;
 	top: 1em;
-	right: 15px;
+	right: 35px;
 	position: absolute;
 	cursor: pointer;
 	color: var(--foreground-text-less);
