--- a/components/misc/Backdrop.module.css
+++ b/components/misc/Backdrop.module.css
@@ -2,7 +2,7 @@
 	background: url(https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
 	background-position: center;
 	background-size: cover;
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	filter: blur(6px) saturate(75%) brightness(40%);
 	position: fixed;
