--- a/pages/moreProjects.module.css
+++ b/pages/moreProjects.module.css
@@ -4,10 +4,11 @@
 	z-index: 2;
 	max-width: 800px;
 	margin: 0 auto;
-	height: 20%;
+	/* height: 30%; */
 }
 
 .title h1 {
+	padding: 10px 0;
 	margin: 0 10px;
 	font-size: 4em;
 	font-weight: 800;
@@ -16,6 +17,6 @@
 .title svg {
 	cursor: pointer;
 	color: var(--accent);
-	margin: 20px 0;
-	font-size: 3em;
+	margin: 20px 10px;
+	font-size: 2em;
 }
