--- a/components/index/Hero.module.css
+++ b/components/index/Hero.module.css
@@ -11,6 +11,7 @@
 }
 
 .container .title {
+	color: var(--dark-foreground-text);
 	font-size: 4.5em;
 	font-weight: 800;
 	margin: 0 0 20px 0;
@@ -20,7 +21,7 @@
 	line-height: 1.3;
 	font-weight: 700;
 	font-size: 1.4em;
-	color: var(--foreground-text);
+	color: var(--dark-foreground-text-less);
 }
 
 .textContent {
