--- a/components/index/ProjectList.module.css
+++ b/components/index/ProjectList.module.css
@@ -5,6 +5,7 @@
 
 .title {
 	padding: 10px 20px;
+	color: var(--dark-foreground-text-less);
 }
 
 .more {
@@ -14,7 +15,7 @@
 	margin: 20px;
 	padding: 0 20px;
 	cursor: pointer;
-	color: var(--foreground-text-less);
+	color: var(--dark-foreground-text-less);
 }
 
 .more svg {
