--- a/components/misc/Backdrop.module.css
+++ b/components/misc/Backdrop.module.css
@@ -1,25 +1,23 @@
 .backdrop {
-	background: url(https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+	background: hsl(0, 100%, 100%);
 	background-position: center;
 	background-size: cover;
 	height: 100vh;
 	width: 100%;
-	filter: blur(6px) saturate(75%) brightness(40%);
 	position: fixed;
 	z-index: -1;
 }
 
 .backdrop:before {
 	content: "";
-	position: absolute;
-	top: 0;
+	/* position: absolute; */
+	top: -98%;
 	right: 0;
 	bottom: 0;
+	width: 100%;
 	left: 0;
-	background-image: linear-gradient(
-		to bottom,
-		rgb(var(--accent-raw), 0.7),
-		rgb(0, 0, 0, 0.6)
-	);
-	opacity: 0.6;
+	/* transform: skewY(-0.5deg); */
+	background: linear-gradient(90deg, hsl(300, 85%, 61%), hsl(224, 91%, 57%));
+	height: 100%;
+	opacity: 0.8;
 }
