--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,8 +4,13 @@
 	--foreground-text: rgb(255, 255, 255);
 	--foreground-text-less: rgb(210, 210, 210);
 	--foreground-text-least: rgb(160, 160, 160);
+
+	--dark-foreground-text: hsl(229, 28%, 16%);
+	--dark-foreground-text-less: hsl(229, 28%, 26%);
+	--dark-foreground-text-least: hsl(229, 28%, 36%);
+
 	--background: rgb(30, 30, 30);
-	--accent-raw: 255, 122, 122;
+	--accent-raw: 240, 71, 240;
 	--accent: rgb(var(--accent-raw));
 
 	color: var(--foreground-text);
@@ -28,7 +33,6 @@ body,
 #__next {
 	height: 100vh;
 	width: 100%;
-	/* overflow: auto; */
 }
 
 h1 {
@@ -44,9 +48,7 @@ h2 {
 
 #__next {
 	min-width: 320px;
-	/* max-width: 820px; */
 	margin: 0 auto;
-	/* padding: 10px; */
 }
 
 @supports (font-variation-settings: normal) {
