--- a/components/index/Hero.module.css
+++ b/components/index/Hero.module.css
@@ -4,7 +4,7 @@
 	z-index: 2;
 	max-width: 800px;
 	margin: 0 auto;
-	height: 50%;
+	height: 50vh;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
