--- a/src/css/global.css
+++ b/src/css/global.css
@@ -23,16 +23,18 @@ html {
 
 html,
 body {
-	overflow: auto;
-	overflow-x: hidden;
 	position: relative;
 }
 
 html,
-body,
-#__next {
-	height: 100vh;
+body {
+	overflow: auto;
+	overflow-x: hidden;
 	width: 100%;
+}
+
+#__next {
+	height: 100%;
 }
 
 h1 {
