--- a/components/Project.module.css
+++ b/components/Project.module.css
@@ -12,9 +12,9 @@
 	left: 0;
 	right: 0;
 	background: white;
-	/* border: 1px solid white; */
 	background: linear-gradient(90deg, hsl(300, 85%, 61%), hsl(224, 91%, 57%));
 	height: 5px;
+	opacity: 0.7;
 }
 
 .title {
